# nginxparser

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tests.py
nginxparser/: __init__.py  cli.py  nginxparser.py  process.py
nginxparser_eb/: __init__.py
nginxparser_eb/tests/: nginxparser_test.py
nginxparser_eb/tests/test_data/etc_nginx/: complex.conf
